# api/swagger/swagger.yaml
@@ -91,6 +91,10 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/model.Song'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/rest.APIError'
         "404":
           description: Not Found
           schema:
