# internal/api/rest/handlers.go
@@ -8,29 +8,30 @@ import (
 	"github.com/google/uuid"
 	"github.com/meraiku/music_lib/internal/api/rest/request"
 	"github.com/meraiku/music_lib/internal/converter"
+	"github.com/meraiku/music_lib/internal/lib/fetcher"
 	"github.com/meraiku/music_lib/internal/model"
 	"github.com/meraiku/music_lib/internal/repo"
 )
 
-// @Summary	Check Server Availability
-// @Produce	json
-// @Success	200	{object}	object
-// @Failure	404	{object}	object
-// @Router		/healthz [get]
+//	@Summary	Check Server Availability
+//	@Produce	json
+//	@Success	200	{object}	object
+//	@Failure	404	{object}	object
+//	@Router		/healthz [get]
 func (i *Implementation) ServerStatus(w http.ResponseWriter, r *http.Request) {
 	i.JSON(w, http.StatusOK, struct{}{})
 }
 
-// @Summary		Get Songs
-// @Description	Prints List of songs
-// @Tags			Songs
-// @Produce		json
-// @Param			page	query		int		false	"Page number. Default 1"
-// @Param			filter	query		string	false	"Filter By ... Default by 'song' name"
-// @Success		200		{array}		model.Song
-// @Failure		404		{object}	object
-// @Failure		500		{object}	APIError
-// @Router			/api/songs [get]
+//	@Summary		Get Songs
+//	@Description	Prints List of songs
+//	@Tags			Songs
+//	@Produce		json
+//	@Param			page	query		int		false	"Page number. Default 1"
+//	@Param			filter	query		string	false	"Filter By ... Default by 'song' name"
+//	@Success		200		{array}		model.Song
+//	@Failure		404		{object}	object
+//	@Failure		500		{object}	APIError
+//	@Router			/api/songs [get]
 func (i *Implementation) GetSongs(w http.ResponseWriter, r *http.Request) error {
 
 	i.log.DebugContext(r.Context(), "Handler started")
@@ -53,17 +54,18 @@ func (i *Implementation) GetSongs(w http.ResponseWriter, r *http.Request) error 
 	return i.JSON(w, http.StatusOK, songList)
 }
 
-// @Summary		Post Song
-// @Description	Add song to Library
-// @Tags			Songs
-// @Accept			json
-// @Produce		json
-// @Param			song	body		request.AddSongRequest	true	"Add song"
-// @Success		201		{object}	model.Song
-// @Failure		404		{object}	object
-// @Failure		422		{object}	APIError
-// @Failure		500		{object}	APIError
-// @Router			/api/songs [post]
+//	@Summary		Post Song
+//	@Description	Add song to Library
+//	@Tags			Songs
+//	@Accept			json
+//	@Produce		json
+//	@Param			song	body		request.AddSongRequest	true	"Add song"
+//	@Success		201		{object}	model.Song
+//	@Failure		400		{object}	APIError
+//	@Failure		404		{object}	object
+//	@Failure		422		{object}	APIError
+//	@Failure		500		{object}	APIError
+//	@Router			/api/songs [post]
 func (i *Implementation) PostSong(w http.ResponseWriter, r *http.Request) error {
 
 	i.log.DebugContext(r.Context(), "Handler started")
@@ -83,6 +85,9 @@ func (i *Implementation) PostSong(w http.ResponseWriter, r *http.Request) error 
 
 	song, err := i.musicService.PostSong(r.Context(), converter.FromAddSongRequestToModel(&req))
 	if err != nil {
+		if errors.Is(err, fetcher.ErrNoData) {
+			return NewAPIError(http.StatusBadRequest, err)
+		}
 		return err
 	}
 
@@ -91,14 +96,14 @@ func (i *Implementation) PostSong(w http.ResponseWriter, r *http.Request) error 
 	return i.JSON(w, http.StatusCreated, song)
 }
 
-// @Summary		Delete Song
-// @Description	Deletes song from Library
-// @Tags			Songs
-// @Param			id	path	string	true	"Song ID"
-// @Success		204
-// @Failure		404	{object}	object
-// @Failure		500	{object}	APIError
-// @Router			/api/songs/{id} [delete]
+//	@Summary		Delete Song
+//	@Description	Deletes song from Library
+//	@Tags			Songs
+//	@Param			id	path	string	true	"Song ID"
+//	@Success		204
+//	@Failure		404	{object}	object
+//	@Failure		500	{object}	APIError
+//	@Router			/api/songs/{id} [delete]
 func (i *Implementation) DeleteSong(w http.ResponseWriter, r *http.Request) error {
 
 	i.log.DebugContext(r.Context(), "Handler started")
@@ -121,19 +126,19 @@ func (i *Implementation) DeleteSong(w http.ResponseWriter, r *http.Request) erro
 	return nil
 }
 
-// @Summary		Update Song Info
-// @Description	Updates song information in Library
-// @Tags			Songs
-// @Accept			json
-// @Produce		json
-// @Param			id		path		string						true	"Song ID"
-// @Param			song	body		request.ModifySongRequest	true	"Modify song info"
-// @Success		200		{object}	model.Song
-// @Failure		400		{object}	APIError
-// @Failure		404		{object}	object
-// @Failure		422		{object}	APIError
-// @Failure		500		{object}	APIError
-// @Router			/api/songs/{id} [put]
+//	@Summary		Update Song Info
+//	@Description	Updates song information in Library
+//	@Tags			Songs
+//	@Accept			json
+//	@Produce		json
+//	@Param			id		path		string						true	"Song ID"
+//	@Param			song	body		request.ModifySongRequest	true	"Modify song info"
+//	@Success		200		{object}	model.Song
+//	@Failure		400		{object}	APIError
+//	@Failure		404		{object}	object
+//	@Failure		422		{object}	APIError
+//	@Failure		500		{object}	APIError
+//	@Router			/api/songs/{id} [put]
 func (i *Implementation) UpdateSong(w http.ResponseWriter, r *http.Request) error {
 
 	i.log.DebugContext(r.Context(), "Handler started")
